opam-version: "2.0"
maintainer: "Jean-Christophe.Filliatre@lri.fr"
authors: [
  "Jean-Christophe Filliâtre"
  "Clément Pascutto"
  "Mário Pereira"
]
license: "MIT"
homepage: "https://github.com/ocaml-gospel/why3gospel"
dev-repo: "git://github.com/ocaml-gospel/why3gospel"
bug-reports: "https://github.com/ocaml-gospel/why3gospel/issues"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "ocaml" {>= "4.07"}
  "dune" {>= "2.4.0"}
  "why3" {>= "1.4.0"}
  "gospel"
  "sexplib"
]
# pin-depends: [
#   "gospel.dev" "git+https://github.com/ocaml-gospel/gospel#9e0c21d385888d79944a1d397c46ddfd52d5bf12"
# ]

synopsis: "A Why3 plugin to read GOSPEL files"
