opam-version: "2.0"
synopsis: "A Why3 plugin to read Gospel files"
maintainer: "Jean-Christophe.Filliatre@lri.fr"
authors: ["Jean-Christophe Filliâtre" "Clément Pascutto" "Mário Pereira"]
license: "MIT"
homepage: "https://github.com/ocaml-gospel/why3gospel"
dev-repo: "git://github.com/ocaml-gospel/why3gospel"
bug-reports: "https://github.com/ocaml-gospel/why3gospel/issues"
build: [
  ["dune" "subst"] {pinned}
  [
    "dune"
    "build"
    "-p"
  name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
  "@doc" {with-doc}
  ]
]

depends: [
  "ocaml" {>= "4.07"}
  "dune" {>= "2.7.0"}
  "gospel"
  "why3" {>= "1.4.0"}
  "ppxlib" {>= "0.23.0"}
  "ocaml-compiler-libs"
]

pin-depends: [
  "gospel.dev" "git+https://github.com/ocaml-gospel/gospel#7718a9e0d75d0a37f61beb2e8bcbfd1856582d59"
]

synopsis: "A Why3 plugin to read GOSPEL files"