(executable
 (flags :standard -open Ocaml_shadow -w -9)
 (name why3gospel)
 (modes plugin)
 (libraries ppxlib sexplib why3 gospel)
 (embed_in_plugin_libraries compiler-libs.common ocaml-compiler-libs.shadow
  ocaml-migrate-parsetree ppxlib.ast ppxlib.stdppx ppxlib.traverse_builtins
  ppxlib.print_diff ppx_derivers ppxlib fmt gospel))

(install
 (section lib_root)
 (files
  (why3gospel.cmxs as why3/plugins/gospel.cmxs))
 (package why3gospel))

(install
 (section share_root)
 (files
  (gospel.mlw as why3/stdlib/gospel.mlw))
 (package why3gospel))
